fix cart align

--- a/assets/_scss/layouts/_cart-cards.scss
+++ b/assets/_scss/layouts/_cart-cards.scss
@@ -46,6 +46,7 @@
             {
                 margin: 0;
                 font-family: $poppins;
+                justify-self: end;
             }
 
             .cart-modify
