--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3443,6 +3443,7 @@ body {
 .cart-list .cart-cards-container .cart-card p {
   margin: 0;
   font-family: "poppins";
+  justify-self: end;
 }
 .cart-list .cart-cards-container .cart-card .cart-modify {
   display: flex;
@@ -3580,98 +3581,4 @@ body {
   .cart-card .cart-modify .cart-addButton:hover {
     color: #f4f4f4;
   }
-<<<<<<< HEAD
-=======
-}
-.cards {
-  width: 90vw;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 10vw;
-}
-
-.cards__wrapBurger {
-  width: 40vw;
-  color: #2f2f2f;
-  box-shadow: 5px 5px 10px 2px #cbcbcb;
-  border-radius: 10px;
-}
-.cards__wrapBurger__black {
-  width: 100%;
-  height: 85px;
-  background-color: #2f2f2f;
-  border-radius: 10px 10px 0 0;
-}
-.cards__wrapBurger__illustration {
-  display: block;
-  width: 90px;
-  margin: -50px auto 0px auto;
-  border-radius: 10px;
-}
-.cards__wrapBurger__white {
-  padding: 20px 10px;
-  height: 250px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.cards__wrapBurger__burgerName {
-  font-family: "roboto";
-  font-size: 20px;
-  font-weight: bold;
-}
-.cards__wrapBurger__description {
-  font-family: "poppins";
-}
-.cards__wrapBurger__wrapPrice {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cards__wrapBurger__wrapPrice__price {
-  font-family: "poppins";
-  font-weight: bold;
-}
-.cards__wrapBurger__wrapPrice__add {
-  background-color: #c8102e;
-  color: #f4f4f4;
-  font-size: 20px;
-  line-height: 24px;
-  text-align: center;
-  width: 24px;
-  border-radius: 12px;
-}
-.cards__wrapBurger__wrapPrice__add:hover {
-  cursor: pointer;
-  scale: 1.05;
-}
-
-@media only screen and (min-width: 768px) {
-  .cards {
-    gap: 6vw;
-  }
-  .cards__wrapBurger {
-    width: 26vw;
-  }
-  .cards__wrapBurger__white {
-    padding: 20px 25px;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .cards {
-    gap: 1vw;
-  }
-  .cards__wrapBurger {
-    width: 21vw;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  .cards__wrapBurger {
-    background-color: #2f2f2f;
-    color: #f4f4f4;
-    box-shadow: 5px 5px 10px 2px #f4f4f4;
-  }
->>>>>>> thomas
 }/*# sourceMappingURL=style.css.map */
